# 42

./: .LICENSE  .README.md  .gitignore  LICENSE  Makefile  README.md
0_electronics/power_supply/: power_supply.kicad_pcb  power_supply.kicad_pro  power_supply.kicad_sch  power_supply.kicad_sch-bak
1_mechanical/: claustra.scad
2_learning/0_Makefile/: memo.md
2_learning/1_Algorithms/: memo.md
2_learning/1_Algorithms/PTR/: Makefile
2_learning/1_Algorithms/SLL/: Makefile  sll.c  sll.h  ut.c
HW/: README.md
HW/kicad_user_footprint_lib/Library.pretty/: Connector_Bon_1x2_P5.00_D1.00.kicad_mod  TRANSFO_230VAC_60HZ_to_12VAC.kicad_mod
HW/power_supply/: #auto_saved_files#  _autosave-power_supply.kicad_pcb  _autosave-power_supply.kicad_sch  power_supply.kicad_pcb  power_supply.kicad_prl  power_supply.kicad_sch
HW/simulations/: Makefile  README.md
HW/simulations/battery/: battery.asc
HW/simulations/chapter-1/: diode.cir
HW/simulations/pvpanel/: pvbatt.asc  pvcell.cir  pvcontroller.asc  pvmodel.asc  pvmonitor.asc  pvpanel.cir
SW/: .ptr.c.swp  CMakeLists.txt  Makefile  README.md  data.temp  main_vector.c  ptr  ptr.c  rec  rec.c  sll  sll.h
SW/calgo/: CMakeLists.txt  README.md
SW/calgo/examples/: main_bitree.c  main_ladder.c
SW/ccryp/: CMakeLists.txt  README.md
SW/ccryp/examples/: aes_nist_appendixA.c  aes_nist_appendixB.c  scytale_main.c  vigenere_main.c
SW/ccryp/include/: aes.h  polybius.h  vigenere.h
SW/ccryp/src/: aes.c  polybius.c  vigenere.c
SW/d3/: example.js  index.html  solLewit.js
SW/docs/: cv.tex  math.aux  math.fdb_latexmk  math.fls  math.tex
SW/examples/: main_events.c  main_ptr.c  main_queue.c  main_set.c  main_sll.c  main_stack.c
SW/haskellExercices/: td1Exe.hs
SW/hgreen/: CHANGELOG.md  README.md  hgreen.cabal  package.yaml
SW/hgreen/app/: Main.hs
SW/hmath/algebra/: exe41.hs
SW/hmath/modellingFundamentals/: CHANGELOG.md  modellingFundamentals.cabal
SW/hmath/modellingFundamentals/app/: task41.hs  task43.hs  task44.hs  task46.hs  task47.hs  task51.hs  testPlots.hs
SW/hmath/modellingFundamentals/lib/: model.hs  plot.hs  plots.hs  singleStateVariableModel.hs  solver.hs
SW/hmath/quadraticsAndCubics/: CHANGELOG.md  README.md  package.yaml  quadraticsAndCubics.cabal
SW/hmath/quadraticsAndCubics/app/: Main.hs  cubicPlot.hs  testPlot.hs
SW/hmath/quadraticsAndCubics/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
SW/hmath/quadraticsAndCubics/dist-newstyle/packagedb/ghc-9.2.8/: package.cache  quadraticsAndCubics-0.1.0.0-inplace.conf
SW/hmath/quadraticsAndCubics/lib/: exe11.hs  exe12.hs  exe13.hs  plot.hs  polynomials.hs  quadratics.hs
SW/hmath/radio/: radio.cabal
SW/hmath/radio/app/: Problem11.hs
SW/hmath/radio/lib/: Basics.hs
SW/hmodel/: CHANGELOG.md  LICENSE  README.md  hmodel.cabal  package.yaml
SW/hmodel/ProjectEuler/Problem1/: Main.hs
SW/hmodel/app/: Main.hs
SW/hmodel/dist-newstyle/cache/: compiler  config
SW/hmodel/src/: Lib.hs  ProjectEuler.hs
SW/hmodel/src/Math/: Geometry.hs  StraightLine.hs
SW/hmodel/src/Memo/: higherOrderFunctions.hs  modules.hs  ownModules.hs  ownTypeclasses.hs  problemSolving.hs  recursion.hs  syntaxInFunctions.hs
SW/hmodel/src/Memo/OwnGeometry/: Cube.hs  Cuboid.hs  Sphere.hs
SW/hmodel/src/Models/: LotkaVolterra.hs
SW/hmodel/test/: Spec.hs
SW/hs/: folding.hs  functions.hs  higherOrder.hs  lists.hs
SW/include/: .sll.h.swp  chtbl.h  cll.h  dll.h  queue.h  set.h  sll.h  stack.h
SW/src/: .sll.c.swp  chtbl.c  cll.c  dll.c  main_cll.c  queue.c  set.c  sll.c  stack.c
electronics/power_supply/: #auto_saved_files#  fp-info-cache  power_supply.kicad_pcb  power_supply.kicad_prl  power_supply.kicad_pro  power_supply.kicad_sch  power_supply.xml
mechanical/: claustra.scad
submodules/abst/: Makefile
submodules/abst/inc/: driver.h  library.h  peripheral.h
submodules/abst/src/: driver.c  library.c  peripheral.c
submodules/abst/usr/: UT.c
submodules/algo/: Makefile
submodules/algo/inc/: dlist.h  list.h  slist.h  stack.h
submodules/algo/src/: dlist.c  list.c  slist.c
submodules/algo/usr/: listUT.c
submodules/dsp/: RIF.m  RII.m  power_supply_RC_highpass.m
submodules/hdl/: Makefile
submodules/hdl/ip/: AND_GATE.vhd  BITSTREAM_RX.vhd  BITSTREAM_TX.vhd  ETH_10BASE-T.vhd  SPI_MASTER.vhd
submodules/hdl/tb/: AND_GATE_tb.vhd  BITSTREAM_RX_tb.vhd  BITSTREAM_TX_tb.vhd  ETH_10BASE-T_tb.vhd
submodules/hdl/vcd/: AND_GATE.vcd  BITSTREAM_RX.vcd  BITSTREAM_TX.vcd  eth_10baset_tb.vcd
submodules/kalman/: matrixKalman.m  simpletonKalman.m
submodules/math/: Makefile
submodules/math/inc/: spiegel10.h  spiegel3.h  spiegel4.h  spiegel5.h  spiegel6.h  spiegel9.h
submodules/math/src/: huffman.c  spiegel10.c  spiegel3.c  spiegel4.c  spiegel5.c  spiegel6.c  spiegel9.c
submodules/math/usr/: cmplxUT.cpp  complex.cpp  fourier_series.cpp  huffmanUT.c  mandelbrot.cpp  spiegelUT.c  svgReaderUT.cpp
submodules/ooc/: Makefile
submodules/ooc/chapter1 - Abstract data types/: Makefile  bagImpl.c  bitmapImpl  bitmapImpl.c  dynamicMemBag  heapImpl.c  set  staticHeapSet
submodules/ooc/chapter2 - Dynamic linkage/: Makefile  main.c  myAtom.c  myString.c  myString.h  new.c  new.h
submodules/shd/: Makefile  cube.c  cube.h  main.c  square.c  square.h
submodules/tuner/: Makefile
submodules/tuner/src/: callbackUT.c  utilityUT.c
