cabal-version:      2.4
name:               modellingFundamentals
version:            0.1.0.0

library 
    hs-source-dirs:
        lib
    exposed-modules:
        SingleStateVariableModel
    build-depends:
          base ^>=4.16.4.0
        , gloss

executable task41
    main-is: 
        task41.hs
    build-depends:    
          base ^>=4.16.4.0
        , gloss
    hs-source-dirs:   
        app
    default-language: 
        Haskell2010
