cabal-version:      2.4
name:               modellingFundamentals
version:            0.1.0.0

library 
    hs-source-dirs:
        lib
    exposed-modules:
        Model
        Solver
        Plot
    build-depends:
          base ^>=4.16.4.0
        , gloss

executable task41
    main-is: 
        task41.hs
    build-depends:    
          base ^>=4.16.4.0
        , gloss
        , modellingFundamentals
    hs-source-dirs:   
        app
    default-language: 
        Haskell2010
executable task43
    main-is:
        task43.hs
    build-depends:
          base ^>=4.16.4.0
        , gloss
        , modellingFundamentals
    hs-source-dirs:
        app
    default-language:
        Haskell2010
executable task44
    main-is:
        task44.hs
    build-depends:
          base ^>=4.16.4.0
        , gloss
        , modellingFundamentals
    hs-source-dirs:
        app
    default-language:
        Haskell2010
executable task46
    main-is:
        task46.hs
    build-depends:
          base ^>=4.16.4.0
        , gloss
        , modellingFundamentals
    hs-source-dirs:
        app
    default-language:
        Haskell2010
executable task47
    main-is:
        task47.hs
    build-depends:
          base ^>=4.16.4.0
        , gloss
        , modellingFundamentals
    hs-source-dirs:
        app
    default-language:
        Haskell2010