cabal-version:      2.4
name:               modellingFundamentals
version:            0.1.0.0

library 
    hs-source-dirs:
        lib
    exposed-modules:
        Model
        Solver
        Plot
    build-depends:
          base ^>=4.16.4.0
        , gloss

executable testPlots
    main-is: 
        testPlots.hs
    build-depends:    
          base ^>=4.16.4.0
        , gloss
    hs-source-dirs:   
        app
    default-language: 
        Haskell2010