cabal-version:      2.4
name:               radio
version:            0.1.0.0

author:             nimisbert
maintainer:         n.misbert@yahoo.fr

executable problem11
    main-is:          Problem11.hs
    build-depends:    base ^>=4.16.4.0, Chart, Chart-cairo, Chart-diagrams
    hs-source-dirs:   app
    default-language: Haskell2010